--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:latest
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -36,3 +36,7 @@ jobs:
       # run tests!
       - run: npm test
 
+      - run:
+          name: Submit Result
+          command: node .circleci/submit.js
+          when: always
